Fix target version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ package-dir = {"" = "."}
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310", "py311"]
+target-version = ["py310", "py311"]
 
 [tool.isort]
 profile = "black"
