Split pyproject into two versions.

--- a/pyproject.optimizers.toml
+++ b/pyproject.optimizers.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "nucleobench"
-version = "0.1.5"
+name = "nucleobench-optimizers"
+version = "0.1.6"
 description = "Optimizers from the nucleobench package."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -20,10 +20,6 @@ classifiers = [
 ]
 dependencies = [
     "torch>=2.2",
-    "lightning",
-    "gReLU==1.0.5",
-    "wandb",
-    "bpnet-lite==0.8.1",
     "numpy>=1.16",
     "scipy",
     "pandas",
@@ -46,15 +42,7 @@ dev = [
 [tool.setuptools]
 packages = [
     "nucleobench", 
-    "nucleobench.common", 
-    "nucleobench.models", 
-    "nucleobench.models.bpnet", 
-    "nucleobench.models.dummy", 
-    "nucleobench.models.grelu", 
-    "nucleobench.models.grelu.enformer",
-    "nucleobench.models.malinois",
-    "nucleobench.models.malinois.model",
-    "nucleobench.models.substring_count_net",  
+    "nucleobench.common",  
     "nucleobench.optimizations", 
     "nucleobench.optimizations.ada", 
     "nucleobench.optimizations.ada.adalead",
