--- a/pyproject.optimizers.toml
+++ b/pyproject.optimizers.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "nucleobench-optimizers"
+name = "nucleopt"
 version = "0.1.6"
 description = "Optimizers from the nucleobench package."
 readme = "README.md"
