--- a/environment.yml
+++ b/environment.yml
@@ -21,11 +21,13 @@ dependencies:
     - lightning
     - wandb  # For skipping login when loading gRelu models.
 
-    - google-cloud-batch
     - google-cloud-storage
+
+    - twine  # For uploading to PyPI.
 
     - bioconda::pybigwig  # Needed for pip libraries below.
 
     - pip:
         - gReLU==1.0.5  # For the gReLU models.
         - bpnet-lite==0.8.1  # For a BPNet model.
+        - build  # For building wheels.
