--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
     - wandb  # For skipping login when loading gRelu models.
 
     - google-cloud-storage
+    - gcsfs  # For reading from GCS through pandas
 
     - twine  # For uploading to PyPI.
 
