--- a/.github/workflows/unit-tests-in-micromamba.yml
+++ b/.github/workflows/unit-tests-in-micromamba.yml
@@ -1,6 +1,6 @@
 # .github/workflows/python-tests.yml
 
-name: Run Python Tests with Mamba
+name: Run Python Unit Tests with Micromamba
 #
 # This workflow runs the tests for the project.
 # It uses the mamba-org/setup-micromamba action to set up the micromamba environment.
