--- a/.github/workflows/integration-tests-in-docker.yml
+++ b/.github/workflows/integration-tests-in-docker.yml
@@ -5,6 +5,13 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  # Add this section to enable manual triggers, for testing.
+  workflow_dispatch:
+    inputs:
+      branch:
+          description: 'The branch to run the tests on'
+          required: true
+          default: 'main'
 
 jobs:
   build:
