--- a/.github/workflows/integration-tests-in-docker-hub.yml
+++ b/.github/workflows/integration-tests-in-docker-hub.yml
@@ -1,4 +1,4 @@
-name: Run Python Integration Test with Docker image
+name: Run Python Integration Test with Docker image from Docker Hub
 
 on:
   push:
