Add verbosity to github workflow tests, by default.

--- a/.github/workflows/integration-tests-in-micromamba.yml
+++ b/.github/workflows/integration-tests-in-micromamba.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Run integration test with pytest
         shell: micromamba-shell {0}
         run: |
-          pytest docker_entrypoint_test.py
+          pytest -v docker_entrypoint_test.py
