--- a/.github/workflows/unit-tests-in-micromamba.yml
+++ b/.github/workflows/unit-tests-in-micromamba.yml
@@ -46,4 +46,4 @@ jobs:
       - name: Run unit tests with pytest
         shell: micromamba-shell {0}
         run: |
-          pytest nucleobench/
+          pytest -v nucleobench/
