--- a/.github/workflows/unit-tests-in-docker-hub.yml
+++ b/.github/workflows/unit-tests-in-docker-hub.yml
@@ -20,4 +20,4 @@ jobs:
         # Ensure the step runs in a bash shell
         shell: bash
         run: |
-          micromamba run -n base pytest -v nucleobench/
+          micromamba run -n base pytest -n auto -v nucleobench/
