--- a/.github/workflows/integration-tests-in-docker-github.yml
+++ b/.github/workflows/integration-tests-in-docker-github.yml
@@ -13,6 +13,9 @@ jobs:
       image: ghcr.io/move37-labs/nucleobench:latest
 
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
       - name: Run integration test
         # Ensure the step runs in a bash shell
         shell: bash
