--- a/.github/workflows/unit-tests-in-docker-hub.yml
+++ b/.github/workflows/unit-tests-in-docker-hub.yml
@@ -13,6 +13,9 @@ jobs:
       image: joelshor/nucleobench:latest
 
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
       - name: Run unit tests with pytest
         # Ensure the step runs in a bash shell
         shell: bash
