--- a/.github/workflows/unit-tests-in-micromamba.yml
+++ b/.github/workflows/unit-tests-in-micromamba.yml
@@ -46,4 +46,10 @@ jobs:
       - name: Run unit tests
         shell: micromamba-shell {0}
         run: |
-          pytest -n auto -v nucleobench/
+          pytest --cov=./ --cov-report=xml -n auto -v nucleobench/
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: ${{ github.repository }}
