Add dep for code coverage.

--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
     - pytest  # Python unit testing framework.
     - pytest-repeat  # For flakiness checking.
     - pytest-xdist # For running tests in parallel.
+    - pytest-cov  # Coverage reporting for tests.
     - coverage  # Python unit testing tool.
     - pyclean  # Remove cache in between tests.
 
